added index file

--- a/index.html
+++ b/index.html
@@ -1,30 +1,208 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Aleksandra McGale</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Currently work in progress</h1>
-				<p>Will be completed after exams</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="aleksandra.mcgale@mail.utoronto.ca">email</a></li>
-        		<li><a href="https://github.com/aleksmcgale">github.com/aleksmcgale</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+<head style="background-color: #5F81A2">
+    <meta charset="UTF-8">
+    <title>Aleksandra'a Page</title>
+    <link rel="icon" type="image/png" href="images/aboutmephoto.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="css/main.css" />
+    <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+</head>
+
+
+
+<body style="background-color: #5F81A2" >
+
+    <!--Wrapper-->
+        <div id="wrapper" class ="fade-in" style="background-color: #5F81A2">
+
+
+            <!--Intro-->
+                <div id = "intro" style="background-image: url('images/Cosmos07.jpg'); background-size: cover; background-color: white ">
+
+                    <h1 style="padding-top: 10px; ">Aleksandra<br />
+                    McGale</h1>
+                    <p><!--[-->University of Toronto: Computer Science, Mathematics, and Statistics</p>
+                    <ul class="actions">
+                        <li><a href="#header" class="button icon solo fa-arrow-down scrolly" >Continue</a></li>
+                    </ul>
+                </div>
+
+            <!-- Header -->
+            <header id="header" >
+
+                <a href="index.html" class="logo">Aleksandra</a>
+            </header>
+
+            <!-- Nav-->
+                <nav id ="nav" >
+                    <ul class = "links" >
+                        <li class="active"><a href="index.html" style="padding-left: 20px; padding-right: 20px;">About Me</a></li>
+                        <li><a href="#linktoprojects">Projects</a> </li>
+                        <li><a href="#linktocontact">Contact</a> </li>
+
+                    </ul>
+                    <ul class="icons">
+                        <li><a href="https://www.facebook.com/mcgale.aleks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="https://www.instagram.com/aleksmcgale/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="https://github.com/aleksmcgale" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+
+                </nav>
+
+            <!-- Main -->
+            <div id="main">
+
+                <!-- Featured Post -->
+                <article class="post_featured">
+                    <header class="major">
+                        <span class="date">2018</span>
+                        <h1 style="padding-bottom: 0.05cm">About Me.</h1>
+                    </header>
+                    <div class="image_main" style="float: left; padding-right: 50px" ><img src="images/aboutmephoto.jpg" alt="" width="360" height="240"/></div>
+                    <p class="p1" style="alignment: right; margin: 30px 5px;">Welcome to my website. I am currently a third year Math, Stats and Computer Science student at the University of Toronto. Some of my interests include rocklimbing either outdoors in Niagra or at my local gym(Boulderz), running and fishing at High Park. Ever since highschool I've always had a passion for sciences and math and initially enrolled at UofT in a Life Science degree majoring in Neuroscience and Stats. After completing CSC108 an intro to programming course dedicated to python, my life changed, and I decided to focus more in the Math and Computer Science department. The following projects are either school assignments that I have completed since then or personal projects! Thanks for visiting, love and aoe.
+                    </p>
+                    <ul class="actions" style= "text-align: center;">
+                        <li><a href="images/AleksandraMcGaleResume.pdf" class="button big">Resume</a></li>
+                    </ul>
+
+                </article>
+
+                <h1 style="padding-top: 25px; text-align: center"><a name="linktoprojects"></a>Projects</h1>
+
+
+                <!-- Posts -->
+                <section class="posts">
+                    <article>
+                        <header>
+                            <span class="date">Winter 2018</span>
+                            <h2><a href="https://github.com/aleksmcgale/SQLProject">SQL and Databases</a></h2>
+                        </header>
+                        <a href="https://github.com/aleksmcgale/SQLProject" class="image fit"><img src="images/Cosmos02.jpg" alt="" /></a>
+
+
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">Winter 2018</span>
+                            <h2><a href="https://github.com/Tenumbra/Treasure-Hunter">Education</a></h2>
+                        </header>
+                        <a href="https://github.com/Tenumbra/Treasure-Hunter" class="image fit"><img src="images/uoftphoto.jpg" alt="" /></a>
+
+
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">Fall 2017</span>
+                            <h2><a href="https://github.com/aleksmcgale/uoft-softwaredesign-project">Java</a></h2>
+                        </header>
+                        <a href="https://github.com/aleksmcgale/uoft-softwaredesign-project" class="image fit"><img src="images/Cosmos07.jpg" alt="" /></a>
+
+
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">Summer 2017</span>
+                            <h2><a href="https://github.com/Tenumbra/UnixTerminal-C">Python</a></h2>
+                        </header>
+                        <a href="https://github.com/Tenumbra/UnixTerminal-C" class="image fit"><img src="images/Cosmos08.jpg" alt="" /></a>
+
+
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">Winter 2018</span>
+                            <h2><a href="https://github.com/aleksmcgale/uoft-computerorganizationlabs">Verilog</a></h2>
+                        </header>
+                        <a href="https://github.com/aleksmcgale/uoft-computerorganizationlabs" class="image fit"><img src="images/NaturePatterns05.jpg" alt="" /></a>
+
+
+                    </article>
+                    <article>
+                        <header>
+                            <span class="date">Winter 2018</span>
+                            <h2><a href="https://github.com/aleksmcgale/aleksmcgale.github.io">Web Design</a></h2>
+                        </header>
+                        <a href="https://github.com/aleksmcgale/aleksmcgale.github.io" class="image fit"><img src="images/NaturePatterns06.jpg" alt="" /></a>
+
+
+                    </article>
+
+                </section>
+                <h1 style="padding-top: 25px; text-align: center"><a name="linktocontact"></a>Contact</h1>
+
+            </div>
+
+
+
+            <!-- Footer -->
+            <footer id="footer">
+                <section>
+                    <form id="gform" method="POST" action="https://formspree.io/aleksandra.mcgale@mail.utoronto.com">
+                        <div class="field">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <div class="field">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" />
+                        </div>
+                        <div class="field">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" rows="3"></textarea>
+                        </div>
+                        <ul class="actions">
+                            <li><input type="submit" value="Send Message" /></li>
+                        </ul>
+                    </form>
+                </section>
+
+
+                <section class="split contact">
+                    <section class="alt">
+                        <h3>Address</h3>
+                        <p>330 Lake Promenade<br />
+                            Toronto, ON M8W 1B6</p>
+                    </section>
+                    <section>
+                        <h3>Phone</h3>
+                        <p><a href="tel:6479825357">(647) 982-5357</a></p>
+                    </section>
+                    <section>
+                        <h3>Email</h3>
+                        <p><a href="mailto:aleksandra.mcgale@mail.utoronto.ca">aleksandra.mcgale@mail.utoronto.ca</a></p>
+                    </section>
+                    <section>
+                        <h3>Social</h3>
+                        <ul class="icons alt">
+                            <li><a href="https://www.facebook.com/mcgale.aleks" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                            <li><a href="https://www.instagram.com/aleksmcgale/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="https://github.com/aleksmcgale" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                        </ul>
+                    </section>
+                </section>
+            </footer>
+
+            <!-- Copyright -->
+            <div id="copyright">
+                <ul><li>&copy; Aleksandra</li><li>love and aoe</li></ul>
+            </div>
+
+
+
+        </div>
+
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrollex.min.js"></script>
+    <script src="js/jquery.scrolly.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
+    <script data-cfasync="false" type="text/javascript"
+            src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+
+
+
+</body>
 </html>
