--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                     <article>
                         <header>
                             <span class="date">Summer 2017</span>
-                            <h2><a href="https://github.com/Tenumbra/UnixTerminal-C">Python</a></h2>
+                            <h2><a href="">Python</a></h2>
                         </header>
-                        <a href="https://github.com/Tenumbra/UnixTerminal-C" class="image fit"><img src="images/Cosmos08.jpg" alt="" /></a>
+                        <a href="" class="image fit"><img src="images/Cosmos08.jpg" alt="" /></a>
 
 
                     </article>
