--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="col-12">
 
-                <a class="abtn" type="submit" id="searchButton" target="_blank" href="https://github.com/aleksmcgale?tab=repositories" >See Projects</a>
+                <a class="abtn" target="_blank" href="https://github.com/aleksmcgale?tab=repositories" >See Projects</a>
 
         </div>
     </div>
