--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
             <div style="margin-top: 10px">
-                <a target="_blank" href="AleksandraMcGaleResume-3%20copy.pdf" class="resume">Resume</a>
+                <a target="_blank" href="AleksandraMcGaleResume-3.pdf" class="resume">Resume</a>
             </div>
 
         </div>
